# cpp-object-detect-project

./: README.md  fusion.cpp  fusion.h  fusion.ui
Fusion/: CMakeLists.txt  main.cpp
Object_Detect/: CMakeLists.txt  Object_Detect_tr_TR.ts  main.cpp  objectdetect.cpp  objectdetect.h  objectdetect.ui
